fixed about page contrast and clutter :tada:

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,6 +76,8 @@ canvas {
     transform: translateX(50%);
     transition: all 0.5s ease-in-out;
 
+    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.85));
+
     &.in {
       opacity: 1;
       transform: translateX(0);
